@@ -1,3 +1,8 @@
+2021-09-27  Matteo Corti  <matteo@corti.li>
+
+	* test/unit_tests.sh: added a routine to create a self-signed certificate expiring in a given number of days
+	* test/unit_tests.sh: added a test for a certificate expiring between 0.5 and 1.5 days
+
 2021-09-25 Bernd Stroessenreuther <booboo@gluga.de>
 
 	* test/unit_tests.sh: adding tests for using floating point numbers in thresholds
